@@ -1,5 +1,10 @@
 2017-10-25  Bruno Haible  <bruno@clisp.org>
 
+	Fix build failure on 64-bit platforms with oint_addr_len==32.
+	* lispbibl.d (SPint): Define as uintP.
+
+2017-10-25  Bruno Haible  <bruno@clisp.org>
+
 	Small code cleanup.
 	* package.d (rehash_symtab): Remove leftover code from 2009-10-07.
 
